2007-08-15  Paul Smith  <psmith@gnu.org>

	* doc/make.texi (GNU Free Documentation License): The fdl.texi
	file has had the section info removed, so add some to make.texi
	before we include it.

2007-08-15  Icarus Sparry  <savannah@icarus.freeuk.com>

	* remake.c (check_dep): Reset the target state for intermediate
	files.  They might have been considered before but not updated
	then (order-only for example) but they will be this time.
	Fixes Savannah bug #'s 3330 and 15919.

2007-07-13  Paul Smith  <psmith@gnu.org>

	* file.c (expand_deps): Use variable_buffer as the start of the
	buffer, not the original pointer (in case it was reallocated).
	Fix suggested by Rafi Einstein <rafi.einstein@formalism-labs.com>.
	Fixes Savannah bug #20452.

2007-07-04  Paul Smith  <psmith@gnu.org>

	* (ALL FILES): Update to GPLv3.
	* (ALL FILES): Update copyright for 2007.

	* main.c (print_version): Move the host type info to the second line.

2007-06-29  Thiemo Seufer  <ths@mips.com>

	* maintMakefile: Update Translation Project location.

2007-06-13  Paul Smith  <psmith@gnu.org>

	* doc/make.texi (Reading Makefiles): "Expansion of deferred" ->
	"Expansion of a deferred"
	Fixes Savannah bug #20018.

	* expand.c (variable_expand_for_file): Preserve the value of
	reading_file rather than setting it to 0 at the end.
	Fixes Savannah bug #20033.

2007-05-11  Paul Smith  <psmith@gnu.org>

	* job.c (new_job): Add debug info to specify where make found the
	command script it is running to build a target.
	Fixes Savannah bug #18617.

	* default.c (default_suffixes,default_suffix_rules,default_variables):
	Add support for Objective C.  Fixes Savannah bug #16389.
	Based on a patch provided by Peter O'Gorman <peter@pogma.com>.

	* function.c (func_lastword): Initialize p.

	* doc/make.texi (Eval Function, Implicit Variables, Special Targets):
	Doc fixes noticed by Bob <twobanjobob@sbcglobal.net>.  Patch from
	Dave Korn <dave.korn@artimi.com>

2007-05-08  Paul Smith  <psmith@gnu.org>
